# python-stop-words

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  ChangeLog.rst  LICENSE  MANIFEST.in  Makefile  README.rst  bootstrap.py  buildout.cfg  flake8.ini  mypy.ini  pyproject.toml  setup.py
.github/workflows/: main.yml  pypi.yml
src/: tests.py
src/stop_words/: __init__.py
stop_words/: __init__.py  tests.py
